tests/samples/compile_errors/jump_target/undefined_on_error.bas
Attribute VB_Name = "UndefinedOnError"
Sub TestOnError()
    On Error GoTo Cleanup
    Exit Sub
End Sub
